migrated to bootstrap 4, added stop and start click gif animation, added wrapping col img appending

--- a/assets/styling/styles.less
+++ b/assets/styling/styles.less
@@ -1,7 +1,9 @@
-.animal-buttons button {
-    margin: .5% 1%;
-    // padding: 1% 5%;
-}
+// Variables
+@giphy-red: #ef706b;
+@giphy-green: #70faa2;
+@giphy-yellow: #fef276;
+@giphy-blue: #55cafa;
+
 
 
 @media (max-width: 768px){
